scrollbar fixed

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -25,7 +25,11 @@
 body {
     background: #171717;
     font-family: AvenirNextCyr-Regular;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 a {
     &:hover {
